# sipin-eark-models

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
.openshift/: Jenkinsfile
eark_models/: __init__.py  etree.py  langstring.py  mods.py  namespaces.py  premis.py  utils.py  xlink.py
eark_models/dc_schema/: v2_1.py
eark_models/mets/: v1_12_1.py
eark_models/mods/: v3_7.py
eark_models/premis/: v3_0.py
eark_models/sip/: v2_2_0.py
eark_models/xlink/: v2.py
tests/: factory.py  test_mods_examples.py  test_mods_v3_7.py  test_premis.py  test_premis_v3_0.py  test_sip_v2_2_0.py  test_xsi_type.py  utils.py
tests/dc_schema/v2_1/: test_dc_schema.py  test_is_part_of.py
tests/dc_schema/v2_1/samples/: is_part_of_custom_namespace.xml  is_part_of_default_namespace.xml  is_part_of_event.xml  is_part_of_with_has_part.xml  is_part_of_without_xsi_type.xml  sample_01.xml
tests/premis/: premis_file_with_custom_xsi_type.xml  premis_file_with_standard_xsi_type.xml  test_premis_v3_0.py  test_xsi_type.py
